--- a/style/main.css
+++ b/style/main.css
@@ -121,6 +121,15 @@ li {
 
 @media (min-width: 48rem) {
   .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: 100vh;
   }
   .testimonials {
@@ -130,7 +139,6 @@ li {
     -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
     grid-gap: 1.8rem;
-    margin: 0 auto;
   }
   .testimonials > * {
     padding: 2rem 1.48rem;
